[gd_scene format=3 uid="uid://cxk008iuw4n7u"]

[ext_resource type="Script" uid="uid://dno3ea8v3s7gx" path="res://scenes/menus/title_screen.gd" id="1_0m8ln"]
[ext_resource type="SpriteFrames" uid="uid://dkgusfub7fbij" path="res://assets/menus/title/gf.res" id="1_ii0wr"]
[ext_resource type="Material" uid="uid://bo61teq831cd6" path="res://assets/shaders/title_screen.tres" id="2_grdy1"]
[ext_resource type="Script" uid="uid://xcwf8fppek0h" path="res://scripts/animated_sprite.gd" id="3_s2rvo"]
[ext_resource type="Script" uid="uid://djsxumpddydxq" path="res://scripts/autoload/conductor.gd" id="3_ssxho"]
[ext_resource type="SpriteFrames" uid="uid://srbxpow67jf1" path="res://assets/menus/title/logo.res" id="5_nv456"]
[ext_resource type="SpriteFrames" uid="uid://diaqnypewr3ov" path="res://assets/menus/title/enter.res" id="6_hraot"]
[ext_resource type="Script" uid="uid://b6ydf4mbyjiwc" path="res://scenes/interface/alphabet.gd" id="7_al1xt"]
[ext_resource type="Texture2D" uid="uid://d1ovx7oy0v4qy" path="res://assets/menus/title/newgrounds_logo.png" id="7_fhw6b"]
[ext_resource type="Resource" uid="uid://5kr5cxye6wyn" path="res://assets/fonts/alphabet/skin_bold.tres" id="10_30q4t"]

[sub_resource type="Animation" id="Animation_6rots"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j1s0s"]
resource_name = "dance_left"
length = 0.583338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_mh840"]
resource_name = "dance_right"
length = 0.583338
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 29]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j25c3"]
_data = {
&"RESET": SubResource("Animation_6rots"),
&"dance_left": SubResource("Animation_j1s0s"),
&"dance_right": SubResource("Animation_mh840")
}

[sub_resource type="Animation" id="Animation_vg1w0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Press Enter to Begin"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_lm570"]
resource_name = "loop"
length = 0.250004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Press Enter to Begin"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qdiad"]
resource_name = "press"
length = 0.33333778
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"ENTER PRESSED"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4274r"]
_data = {
&"RESET": SubResource("Animation_vg1w0"),
&"loop": SubResource("Animation_lm570"),
&"press": SubResource("Animation_qdiad")
}

[sub_resource type="Animation" id="Animation_gpcxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("alphabet:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("alphabet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("newgrounds_logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0iyna"]
resource_name = "intro"
length = 16.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("alphabet:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["", "the
funkin' crew inc", "the
funkin' crew inc
don't present", "", "in no association
with", "in no association
with
newgrounds", "", "!random", "!keep", "!randomall", "", "Friday", "Friday
Night", "Friday
Night
Funkin'", ""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("alphabet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 5, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -72), Vector2(0, -36), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("newgrounds_logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v06vg"]
_data = {
&"RESET": SubResource("Animation_gpcxv"),
&"intro": SubResource("Animation_0iyna")
}

[node name="title_screen" type="Node2D" unique_id=610167585]
script = ExtResource("1_0m8ln")
swag_material = ExtResource("2_grdy1")

[node name="conductor" type="Node" parent="." unique_id=1122116043]
unique_name_in_owner = true
script = ExtResource("3_ssxho")
metadata/_custom_type_script = "uid://djsxumpddydxq"

[node name="post_intro" type="Node2D" parent="." unique_id=1918716990]
visible = false

[node name="girlfriend" type="Node2D" parent="post_intro" unique_id=841461104]
position = Vector2(891, 373)

[node name="sprite" type="AnimatedSprite2D" parent="post_intro/girlfriend" unique_id=1022928287]
material = ExtResource("2_grdy1")
sprite_frames = ExtResource("1_ii0wr")
animation = &"gfDance"
script = ExtResource("3_s2rvo")

[node name="animation_player" type="AnimationPlayer" parent="post_intro/girlfriend" unique_id=201242509]
libraries/ = SubResource("AnimationLibrary_j25c3")

[node name="logo" type="Node2D" parent="post_intro" unique_id=741380354]
position = Vector2(354, 246)

[node name="sprite" type="AnimatedSprite2D" parent="post_intro/logo" unique_id=681811415]
material = ExtResource("2_grdy1")
sprite_frames = ExtResource("5_nv456")
animation = &"bump"
script = ExtResource("3_s2rvo")

[node name="enter" type="Node2D" parent="post_intro" unique_id=497100013]
position = Vector2(805, 636)

[node name="sprite" type="AnimatedSprite2D" parent="post_intro/enter" unique_id=1680006475]
material = ExtResource("2_grdy1")
sprite_frames = ExtResource("6_hraot")
animation = &"Press Enter to Begin"
frame = 8
script = ExtResource("3_s2rvo")

[node name="animation_player" type="AnimationPlayer" parent="post_intro/enter" unique_id=1284167027]
libraries/ = SubResource("AnimationLibrary_4274r")

[node name="intro_sequence" type="Node2D" parent="." unique_id=1181948435]
position = Vector2(640, 360)

[node name="newgrounds_logo" type="Sprite2D" parent="intro_sequence" unique_id=2102314791]
position = Vector2(-21, 204)
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_fhw6b")

[node name="alphabet" type="Node2D" parent="intro_sequence" unique_id=828383561]
unique_name_in_owner = true
script = ExtResource("7_al1xt")
skin = ExtResource("10_30q4t")
centered = true
horizontal_alignment = "Center"

[node name="animation_player" type="AnimationPlayer" parent="intro_sequence" unique_id=233742057]
callback_mode_process = 2
libraries/ = SubResource("AnimationLibrary_v06vg")

[node name="flash" type="ColorRect" parent="." unique_id=450789777]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true
